fix: Dashbaord text was not visible.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,7 +42,7 @@
     color: rgba(0, 0, 0, 1);
 }
 .dropdown-toggle::after {
-    content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+    content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' strokeLinecap='round' strokeLinejoin='round' strokeWidth='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
     width: 12px;
     margin-top: 3px;
     margin-left: 0px;
